<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleEncryptor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvKey">Key:</string>
    <string name="tvText">Text:</string>
    <string name="btnEncrypt">Encrypt</string>
    <string name="btnDecrypt">Decrypt</string>
    <string name="btnFileEncrypt">Encrypt file</string>
    <string name="btnFileDecrypt">Decrypt file</string>

</resources>
